<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/settingsMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.48"
        android:background="@color/settings_background">

        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_title"
            android:textSize="24sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/settings_text"
            android:layout_marginHorizontal="20dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/privacySection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@+id/settingsTitle"
            android:paddingVertical="@dimen/settings_vertical_padding"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/privacyImage"
                android:layout_width="@dimen/settings_icon"
                android:layout_height="@dimen/settings_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="40dp"
                android:src="@drawable/shield"/>

            <TextView
                android:id="@+id/privacyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/privacyDescription"
                app:layout_constraintStart_toEndOf="@+id/privacyImage"
                android:text="@string/privacy_title"
                android:textSize="@dimen/settings_title"
                android:textStyle="bold"
                android:textColor="@color/settings_text"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                android:id="@+id/privacyDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/privacyTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/privacyImage"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/privacy_description"
                android:textSize="@dimen/settings_description"
                android:textColor="@color/settings_text_opacity"
                android:layout_marginHorizontal="20dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/updateSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@+id/privacySection"
            android:paddingVertical="@dimen/settings_vertical_padding"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/updateImage"
                android:layout_width="@dimen/settings_icon"
                android:layout_height="@dimen/settings_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="40dp"
                android:src="@drawable/update"/>

            <TextView
                android:id="@+id/updateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/updateDescription"
                app:layout_constraintStart_toEndOf="@+id/updateImage"
                android:text="@string/update_title"
                android:textSize="@dimen/settings_title"
                android:textStyle="bold"
                android:textColor="@color/settings_text"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                android:id="@+id/updateDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/updateTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/updateImage"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/update_description"
                android:textSize="@dimen/settings_description"
                android:textColor="@color/settings_text_opacity"
                android:layout_marginHorizontal="20dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/helpSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@+id/updateSection"
            android:paddingVertical="@dimen/settings_vertical_padding"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/helpImage"
                android:layout_width="@dimen/settings_icon"
                android:layout_height="@dimen/settings_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="40dp"
                android:src="@drawable/help"/>

            <TextView
                android:id="@+id/helpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/helpDescription"
                app:layout_constraintStart_toEndOf="@+id/helpImage"
                android:text="@string/help_title"
                android:textSize="@dimen/settings_title"
                android:textStyle="bold"
                android:textColor="@color/settings_text"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                android:id="@+id/helpDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/helpTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/helpImage"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/help_description"
                android:textSize="@dimen/settings_description"
                android:textColor="@color/settings_text_opacity"
                android:layout_marginHorizontal="20dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/aboutSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@+id/helpSection"
            android:paddingVertical="@dimen/settings_vertical_padding"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/aboutImage"
                android:layout_width="@dimen/settings_icon"
                android:layout_height="@dimen/settings_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="40dp"
                android:src="@drawable/info"/>

            <TextView
                android:id="@+id/aboutTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/aboutDescription"
                app:layout_constraintStart_toEndOf="@+id/aboutImage"
                android:text="@string/about_title"
                android:textSize="@dimen/settings_title"
                android:textStyle="bold"
                android:textColor="@color/settings_text"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                android:id="@+id/aboutDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/aboutTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/aboutImage"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/about_description"
                android:textSize="@dimen/settings_description"
                android:textColor="@color/settings_text_opacity"
                android:layout_marginHorizontal="20dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>