<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.125"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_60_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50"/>

    <ImageView
        android:id="@+id/toolbarImageView"
        android:layout_width="60dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_guideline"
        android:src="@drawable/shobiz"
        />

    <TextView
        android:id="@+id/toolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/toolbarImageView"
        app:layout_constraintTop_toTopOf="@+id/toolbarImageView"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarImageView"
        android:layout_marginHorizontal="24dp"
        android:text="@string/homepage"
        android:textColor="@color/black"
        android:textSize="22sp"/>

    <ImageView
        android:id="@+id/toolbarSettingsIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/toolbarTimeTextClock"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_guideline"
        android:src="@drawable/settings"
        android:layout_marginHorizontal="24dp"
        />

    <TextClock
        android:id="@+id/toolbarTimeTextClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/vertical_guideline_end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_guideline"
        android:format12Hour="hh:mm"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/toolbarTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/vertical_guideline_end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_guideline"
        android:text="2:45"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/bannerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_60_guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
        app:layout_constraintEnd_toEndOf="@+id/vertical_guideline_end"
        android:background="@drawable/card_unselected"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="0dp"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/bannerImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/banner_image"
                android:layout_marginStart="50dp"/>

            <LinearLayout
                android:id="@+id/bannerTextContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bannerImageView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="50dp">

                <TextView
                    android:id="@+id/bannerTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/banner_title"
                    android:textSize="35sp"
                    android:textColor="@color/black"
                   />

                <TextView
                    android:id="@+id/bannerDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/banner_description"
                    android:textSize="15sp"
                    android:lineHeight="22sp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <ImageView
                android:id="@+id/bannerLiveBadge"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/live_badge"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:context=".MainActivity"
        tools:deviceIds="tv"
        tools:ignore="MergeRootFrame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_60_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="24dp"/>

    <FrameLayout
        android:id="@+id/settingsOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/black"
        android:alpha="0.4"
        android:visibility="gone"/>

    <include
        android:id="@+id/settingsMenu"
        layout="@layout/settings_menu"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>